# 30-days-of-agentic-apis

./: .gitignore  README.md
day-01-e2b/: .env.example  .gitignore  README.md  e2b.Dockerfile  pyproject.toml
day-01-e2b/fixtures/sample_frontend_task/: TASK.md  index.css  index.html  index.js  package.json  pnpm-lock.yaml  vite.config.js
day-01-e2b/src/agent_black_box/: __init__.py  arena.py  arena_service.py  arena_store.py  atomic_files.py  cli.py  config.py  (+26 more)
day-01-e2b/tests/: test_arena_service.py  test_arena_store.py  test_atomic_files.py  test_cli.py  test_coordinator.py  test_demo_catalog.py  test_events.py  test_fixture_policy.py  test_launch.py  test_model_client.py  test_model_protocol.py  test_preview_execution.py  test_preview_lifecycle.py  test_preview_service.py  test_prompts.py  test_recorder.py  test_replay.py  test_run_evidence_milestones.py  test_run_lifecycle.py  test_run_projection.py  test_run_store.py  test_sandbox_controller.py  test_server.py
day-01-e2b/web/: README.md
day-02-firecrawl-docs-auditor/: .env.example  README.md  pyproject.toml
day-02-firecrawl-docs-auditor/contracts/: README.md  audit_report.schema.json  audit_request.schema.json
day-02-firecrawl-docs-auditor/tests/: test_audit_engine.py  test_codex_app_server.py  test_contracts.py  test_firecrawl_ingestion.py  test_firecrawl_preflight.py  test_server.py  test_server_audit_report.py  test_server_codex_auth.py  test_server_firecrawl_fetch.py  test_server_firecrawl_preflight.py  test_source_planner.py
day-02-firecrawl-docs-auditor/web/: package.json  pnpm-lock.yaml
(+35 files in other folders)
