[project]
name = "agent-black-box"
version = "0.1.0"
description = "Single-agent E2B recorder harness for Agent Black Box"
readme = "README.md"
authors = [
    { name = "George Pickett", email = "gpickett00@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.13.0",
    "e2b>=2.19.0",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "rich>=14.3.3",
    "typer>=0.24.1",
    "uvicorn>=0.42.0",
]

[project.scripts]
agent-black-box = "agent_black_box.cli:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
]
