[project]
name = "firecrawl-docs-auditor"
version = "0.1.0"
description = "Local Firecrawl docs auditor scaffold for 30 Days of Agentic APIs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.42.0",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jsonschema>=4.0",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]
